# aldebaran

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: canvas.rs  lib.rs  util.rs  websocket.rs
public/: index.html  style.css
server/: Cargo.toml
server/src/: build.rs  http.rs  main.rs  watch.rs  websocket.rs
src/: main.rs
