[package]
name = "app"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "BinaryType",
  "Document",
  "ErrorEvent",
  "HtmlCanvasElement",
  "HtmlElement",
  "Location",
  "MessageEvent",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlVertexArrayObject",
  "WebSocket",
  "Window"
] }
