[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = { git = "https://github.com/hyperium/hyper", rev = "b4e2433", features = ["full"] }
notify = "5.0.0-pre.3"
tokio = { version = "0.3", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.12"
wasm-bindgen-cli-support = "0.2"
