[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
notify = "5.0.0-pre.8"
tokio = { version = "1.6", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.14"
wasm-bindgen-cli-support = "0.2"
